Grammar/StannumParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\Stannum.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Stannum.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class StannumParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, BREAK=38, 
		CONTINUE=39, ELSE=40, FOR=41, IF=42, MATCH=43, RETURN=44, STRUCT=45, VAR=46, 
		WHILE=47, IDENTIFIER=48, NUMBER=49, STRING=50, WS=51, COMMENT=52;
	public const int
		RULE_program = 0, RULE_repl = 1, RULE_statement = 2, RULE_definition_ = 3, 
		RULE_exprStmt = 4, RULE_forStmt = 5, RULE_ifStmt_ = 6, RULE_whileStmt = 7, 
		RULE_blockStmt = 8, RULE_expression = 9, RULE_assignment_ = 10, RULE_coalesce_ = 11, 
		RULE_logicalOr_ = 12, RULE_logicalAnd_ = 13, RULE_equality_ = 14, RULE_relational_ = 15, 
		RULE_concatenative_ = 16, RULE_additive_ = 17, RULE_multiplicative_ = 18, 
		RULE_prefix_ = 19, RULE_accessOrCall = 20, RULE_primary = 21, RULE_primaryWithBlock = 22, 
		RULE_blockExpr = 23, RULE_breakExpr = 24, RULE_continueExpr = 25, RULE_grouped = 26, 
		RULE_identifier = 27, RULE_ifExpr = 28, RULE_lambdaWithBlock = 29, RULE_lambdaWithExpr = 30, 
		RULE_literal = 31, RULE_list = 32, RULE_record = 33, RULE_recordField = 34, 
		RULE_returnExpr = 35, RULE_keyword = 36;
	public static readonly string[] ruleNames = {
		"program", "repl", "statement", "definition_", "exprStmt", "forStmt", 
		"ifStmt_", "whileStmt", "blockStmt", "expression", "assignment_", "coalesce_", 
		"logicalOr_", "logicalAnd_", "equality_", "relational_", "concatenative_", 
		"additive_", "multiplicative_", "prefix_", "accessOrCall", "primary", 
		"primaryWithBlock", "blockExpr", "breakExpr", "continueExpr", "grouped", 
		"identifier", "ifExpr", "lambdaWithBlock", "lambdaWithExpr", "literal", 
		"list", "record", "recordField", "returnExpr", "keyword"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "';'", "':'", "'->'", "'{'", "'}'", "':='", "'+='", "'-='", 
		"'*='", "'/='", "'%='", "'??'", "'||'", "'&&'", "'=='", "'!='", "'<'", 
		"'>'", "'<='", "'>='", "'++'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
		"'.'", "'?.'", "'('", "','", "')'", "'$'", "'=>'", "'['", "']'", "'break'", 
		"'continue'", "'else'", "'for'", "'if'", "'match'", "'return'", "'struct'", 
		"'var'", "'while'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "BREAK", "CONTINUE", "ELSE", "FOR", "IF", "MATCH", "RETURN", 
		"STRUCT", "VAR", "WHILE", "IDENTIFIER", "NUMBER", "STRING", "WS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Stannum.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static StannumParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public StannumParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public StannumParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public Definition_Context _definition_;
		public IList<Definition_Context> _Defs = new List<Definition_Context>();
		public ITerminalNode Eof() { return GetToken(StannumParser.Eof, 0); }
		public Definition_Context[] definition_() {
			return GetRuleContexts<Definition_Context>();
		}
		public Definition_Context definition_(int i) {
			return GetRuleContext<Definition_Context>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__33 || _la==IDENTIFIER) {
				{
				{
				State = 74; _localctx._definition_ = definition_();
				_localctx._Defs.Add(_localctx._definition_);
				}
				}
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 80; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReplContext : ParserRuleContext {
		public StatementContext _statement;
		public IList<StatementContext> _Stmts = new List<StatementContext>();
		public ExpressionContext Value;
		public ITerminalNode Eof() { return GetToken(StannumParser.Eof, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ReplContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_repl; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReplContext repl() {
		ReplContext _localctx = new ReplContext(Context, State);
		EnterRule(_localctx, 2, RULE_repl);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 82; _localctx._statement = statement();
					_localctx._Stmts.Add(_localctx._statement);
					}
					} 
				}
				State = 87;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__23) | (1L << T__27) | (1L << T__30) | (1L << T__33) | (1L << T__35) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << RETURN) | (1L << IDENTIFIER) | (1L << NUMBER) | (1L << STRING))) != 0)) {
				{
				State = 88; _localctx.Value = expression();
				}
			}

			State = 91; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public Definition_Context definition_() {
			return GetRuleContext<Definition_Context>(0);
		}
		public ExprStmtContext exprStmt() {
			return GetRuleContext<ExprStmtContext>(0);
		}
		public ForStmtContext forStmt() {
			return GetRuleContext<ForStmtContext>(0);
		}
		public IfStmt_Context ifStmt_() {
			return GetRuleContext<IfStmt_Context>(0);
		}
		public WhileStmtContext whileStmt() {
			return GetRuleContext<WhileStmtContext>(0);
		}
		public BlockStmtContext blockStmt() {
			return GetRuleContext<BlockStmtContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93; definition_();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94; exprStmt();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 95; forStmt();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 96; ifStmt_();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 97; whileStmt();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 98; blockStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Definition_Context : ParserRuleContext {
		public Definition_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definition_; } }
	 
		public Definition_Context() { }
		public virtual void CopyFrom(Definition_Context context) {
			base.CopyFrom(context);
		}
	}
	public partial class DefinitionWithoutSemiContext : Definition_Context {
		public IdentifierContext Name;
		public PrimaryWithBlockContext Value;
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public PrimaryWithBlockContext primaryWithBlock() {
			return GetRuleContext<PrimaryWithBlockContext>(0);
		}
		public DefinitionWithoutSemiContext(Definition_Context context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefinitionWithoutSemi(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DefinitionContext : Definition_Context {
		public IdentifierContext Name;
		public ExpressionContext Value;
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DefinitionContext(Definition_Context context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Definition_Context definition_() {
		Definition_Context _localctx = new Definition_Context(Context, State);
		EnterRule(_localctx, 6, RULE_definition_);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new DefinitionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 101; ((DefinitionContext)_localctx).Name = identifier();
				State = 102; Match(T__0);
				State = 103; ((DefinitionContext)_localctx).Value = expression();
				State = 104; Match(T__1);
				}
				break;
			case 2:
				_localctx = new DefinitionWithoutSemiContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 106; ((DefinitionWithoutSemiContext)_localctx).Name = identifier();
				State = 107; Match(T__0);
				State = 108; ((DefinitionWithoutSemiContext)_localctx).Value = primaryWithBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprStmtContext : ParserRuleContext {
		public ExpressionContext Value;
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ExprStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExprStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprStmtContext exprStmt() {
		ExprStmtContext _localctx = new ExprStmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_exprStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; _localctx.Value = expression();
			State = 113; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForStmtContext : ParserRuleContext {
		public IdentifierContext Label;
		public ExpressionContext Value;
		public IdentifierContext Var;
		public BlockStmtContext Body;
		public ITerminalNode FOR() { return GetToken(StannumParser.FOR, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockStmtContext blockStmt() {
			return GetRuleContext<BlockStmtContext>(0);
		}
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ForStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForStmtContext forStmt() {
		ForStmtContext _localctx = new ForStmtContext(Context, State);
		EnterRule(_localctx, 10, RULE_forStmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__33 || _la==IDENTIFIER) {
				{
				State = 115; _localctx.Label = identifier();
				State = 116; Match(T__2);
				}
			}

			State = 120; Match(FOR);
			State = 121; _localctx.Value = expression();
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 122; Match(T__3);
				State = 123; _localctx.Var = identifier();
				}
			}

			State = 126; _localctx.Body = blockStmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStmt_Context : ParserRuleContext {
		public IfStmt_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStmt_; } }
	 
		public IfStmt_Context() { }
		public virtual void CopyFrom(IfStmt_Context context) {
			base.CopyFrom(context);
		}
	}
	public partial class IfStmtContext : IfStmt_Context {
		public ExpressionContext Cond;
		public BlockStmtContext Cons;
		public ITerminalNode IF() { return GetToken(StannumParser.IF, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockStmtContext blockStmt() {
			return GetRuleContext<BlockStmtContext>(0);
		}
		public IfStmtContext(IfStmt_Context context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfElseStmtContext : IfStmt_Context {
		public ExpressionContext Cond;
		public BlockStmtContext Cons;
		public BlockStmtContext Alt;
		public ITerminalNode IF() { return GetToken(StannumParser.IF, 0); }
		public ITerminalNode ELSE() { return GetToken(StannumParser.ELSE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockStmtContext[] blockStmt() {
			return GetRuleContexts<BlockStmtContext>();
		}
		public BlockStmtContext blockStmt(int i) {
			return GetRuleContext<BlockStmtContext>(i);
		}
		public IfElseStmtContext(IfStmt_Context context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfElseStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfElseIfStmtContext : IfStmt_Context {
		public ExpressionContext Cond;
		public BlockStmtContext Cons;
		public IfStmt_Context AltIf;
		public ITerminalNode IF() { return GetToken(StannumParser.IF, 0); }
		public ITerminalNode ELSE() { return GetToken(StannumParser.ELSE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockStmtContext blockStmt() {
			return GetRuleContext<BlockStmtContext>(0);
		}
		public IfStmt_Context ifStmt_() {
			return GetRuleContext<IfStmt_Context>(0);
		}
		public IfElseIfStmtContext(IfStmt_Context context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfElseIfStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStmt_Context ifStmt_() {
		IfStmt_Context _localctx = new IfStmt_Context(Context, State);
		EnterRule(_localctx, 12, RULE_ifStmt_);
		try {
			State = 144;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				_localctx = new IfStmtContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 128; Match(IF);
				State = 129; ((IfStmtContext)_localctx).Cond = expression();
				State = 130; ((IfStmtContext)_localctx).Cons = blockStmt();
				}
				break;
			case 2:
				_localctx = new IfElseStmtContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 132; Match(IF);
				State = 133; ((IfElseStmtContext)_localctx).Cond = expression();
				State = 134; ((IfElseStmtContext)_localctx).Cons = blockStmt();
				State = 135; Match(ELSE);
				State = 136; ((IfElseStmtContext)_localctx).Alt = blockStmt();
				}
				break;
			case 3:
				_localctx = new IfElseIfStmtContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 138; Match(IF);
				State = 139; ((IfElseIfStmtContext)_localctx).Cond = expression();
				State = 140; ((IfElseIfStmtContext)_localctx).Cons = blockStmt();
				State = 141; Match(ELSE);
				State = 142; ((IfElseIfStmtContext)_localctx).AltIf = ifStmt_();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileStmtContext : ParserRuleContext {
		public IdentifierContext Label;
		public ExpressionContext Value;
		public BlockStmtContext Body;
		public ITerminalNode WHILE() { return GetToken(StannumParser.WHILE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockStmtContext blockStmt() {
			return GetRuleContext<BlockStmtContext>(0);
		}
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public WhileStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileStmtContext whileStmt() {
		WhileStmtContext _localctx = new WhileStmtContext(Context, State);
		EnterRule(_localctx, 14, RULE_whileStmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__33 || _la==IDENTIFIER) {
				{
				State = 146; _localctx.Label = identifier();
				State = 147; Match(T__2);
				}
			}

			State = 151; Match(WHILE);
			State = 152; _localctx.Value = expression();
			State = 153; _localctx.Body = blockStmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockStmtContext : ParserRuleContext {
		public StatementContext _statement;
		public IList<StatementContext> _Stmts = new List<StatementContext>();
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockStmtContext blockStmt() {
		BlockStmtContext _localctx = new BlockStmtContext(Context, State);
		EnterRule(_localctx, 16, RULE_blockStmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155; Match(T__4);
			State = 159;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__23) | (1L << T__27) | (1L << T__30) | (1L << T__33) | (1L << T__35) | (1L << BREAK) | (1L << CONTINUE) | (1L << FOR) | (1L << IF) | (1L << RETURN) | (1L << WHILE) | (1L << IDENTIFIER) | (1L << NUMBER) | (1L << STRING))) != 0)) {
				{
				{
				State = 156; _localctx._statement = statement();
				_localctx._Stmts.Add(_localctx._statement);
				}
				}
				State = 161;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 162; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public Assignment_Context assignment_() {
			return GetRuleContext<Assignment_Context>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStannumVisitor<TResult> typedVisitor = visitor as IStannumVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 18, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164; assignment_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
